# Aumi

./: .gitignore  README.md
android/: AndroidManifest.xml  AumiApplication.kt  AumiLockScreenActivity.kt  MainActivity.kt  NetworkManager.kt  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/cpp/: CMakeLists.txt  audio_engine.cpp  jni_bridge.cpp  opus_codec.cpp
android/crypto/: AESCipher.kt
android/focus/: AumiFocusManager.kt
android/ime/: AumiKeyboardService.kt
android/media/: AumiAudioEngine.kt  AumiVideoEncoder.kt
android/pairing/: PairingManager.kt  QRCodeScanner.kt
android/res/layout/: activity_lock_screen.xml  activity_main.xml
android/res/xml/: method.xml
android/services/: AumiInCallService.kt  AumiNotificationListener.kt  AumiNotificationService.kt  AumiSmsHandler.kt  SmsReceiver.kt  SmsSender.kt
android/streaming/: AudioBridge.kt
android/util/: BatteryOptimizationHelper.kt
macos/: AudioPlayer.swift  AudioRouteManager.swift  CallUI.swift  ClipboardManager.swift  Dashboard.swift  FileTransferManager.swift  NetworkManager.swift  Package.swift  SMSUI.swift  VideoDecoder.swift
macos/App/: AppDelegate.swift
macos/Calls/: CallManager.swift
macos/Connection/: ConnectionManager.swift
macos/Crypto/: AESCipher.swift
macos/FileTransfer/: FileTransferManager.swift
macos/Notifications/: NotificationBridge.swift
macos/ScreenMirror/: ScreenMirrorWindow.swift
macos/Sources/Aumi/: AudioRouteManager.swift  VideoDecoder.swift
macos/Sources/Aumi/App/: AppDelegate.swift  Globals.swift
macos/Sources/Aumi/Calls/: CallManager.swift  (+1 more)
macos/Streaming/: AudioCapture.swift
relay-server/: index.js  package.json
relay-server/src/: index.ts
shared/: protocol.json
(+30 files in other folders)
